test/errors/equ1.rcasm
!let irqline0 = 13
!let irqline0 = 52

    ldi a,0